--- a/kb.html
+++ b/kb.html
@@ -235,511 +235,7 @@
         <div class="video-grid">
             <div class="video-card">
                 <div class="iframe-container">
-                    <iframe src="<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konkani Bhajans | Devotional Hub</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #ff6b00; 
-            --dark-color: #2c3e50;
-            --light-bg: #f9f9f9;
-            --white: #ffffff;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: var(--light-bg);
-            color: var(--dark-color);
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-
-        /* Navigation */
-        nav {
-            background: var(--white);
-            padding: 1rem 5%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .logo-area {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .logo-area img {
-            height: 40px;
-            border-radius: 50%;
-        }
-
-        /* Hero Section */
-        .hero {
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('hero-bg.jpg'); 
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: white;
-            padding: 100px 5%;
-            text-align: center;
-            min-height: 60vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .hero h1 {
-            font-size: clamp(2.2rem, 5vw, 3rem);
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-        }
-
-        .hero p {
-            font-size: clamp(1rem, 2vw, 1.2rem);
-            margin-bottom: 30px;
-            opacity: 0.9;
-        }
-
-        .btn-group {
-            display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .btn-subscribe {
-            background-color: #ff0000; 
-            color: white;
-            padding: 14px 35px;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: bold;
-            transition: transform 0.3s;
-            text-transform: uppercase;
-        }
-
-        .btn-contact {
-            background-color: var(--white);
-            color: var(--dark-color);
-            padding: 14px 35px;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: bold;
-            transition: transform 0.3s;
-        }
-
-        .btn-subscribe:hover, .btn-contact:hover { transform: scale(1.05); }
-
-        /* Stats Bar */
-        .stats-bar {
-            display: flex;
-            justify-content: center;
-            gap: 50px;
-            padding: 30px;
-            background: var(--white);
-            margin: -50px auto 40px;
-            width: 85%;
-            max-width: 800px;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            position: relative;
-            z-index: 5;
-        }
-
-        .stat-item { text-align: center; }
-        .stat-item b { display: block; font-size: 1.8rem; color: #f39c12; }
-        .stat-item span { font-size: 0.9rem; color: #7f8c8d; font-weight: 600; }
-
-        /* Marquee Bar */
-        .marquee-container {
-            background: #fff3e0;
-            color: var(--primary-color);
-            padding: 12px 0;
-            font-weight: 600;
-            font-size: 0.95rem;
-            border-top: 2px solid #ffe0b2;
-            border-bottom: 2px solid #ffe0b2;
-            overflow: hidden;
-            width: 100%;
-            margin-bottom: 30px;
-        }
-
-        .marquee-content {
-            display: inline-block;
-            white-space: nowrap;
-            padding-left: 100%;
-            animation: marquee 35s linear infinite;
-        }
-
-        @keyframes marquee {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-100%); }
-        }
-
-        .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
-        .section-title { text-align: center; margin-bottom: 20px; font-size: 2rem; }
-        
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 25px;
-        }
-
-        .video-card {
-            background: var(--white);
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-        }
-
-        .iframe-container {
-            position: relative;
-            padding-bottom: 56.25%;
-            height: 0;
-            background: #000;
-        }
-
-        .iframe-container iframe {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%; border: 0;
-        }
-
-        footer {
-            text-align: center;
-            padding: 50px 20px;
-            background: var(--dark-color);
-            color: white;
-            margin-top: 60px;
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 { font-size: 2.2rem; }
-            .stats-bar { flex-direction: column; gap: 20px; margin-top: -30px; width: 90%; }
-        }
-    </style>
-</head>
-<body>
-
-    <nav>
-        <div class="logo-area">
-            <img src="logo.png" alt="Logo">
-            <strong>Konkani Bhajans</strong>
-        </div>
-        <div class="nav-links">
-            <a href="mailto:konkanibhajansofficial@gmail.com" style="text-decoration:none; color:var(--dark-color); font-weight:600;">Contact</a>
-        </div>
-    </nav>
-
-    <header class="hero">
-        <h1>Konkani Bhajans</h1>
-        <p>Evergreen Konkani Bhajans Forever</p>
-        <div class="btn-group">
-            <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">Subscribe Now</a>
-            <a href="mailto:konkanibhajansofficial@gmail.com" class="btn-contact">Share Your Bhajans</a>
-        </div>
-    </header>
-
-    <div class="stats-bar">
-        <div class="stat-item"><b>924</b><span>Subscribers</span></div>
-        <div class="stat-item"><b>11+</b><span>Videos</span></div>
-        <div class="stat-item"><b>Free</b><span>Distribution</span></div>
-    </div>
-
-    <div class="container">
-        <div class="marquee-container">
-            <div class="marquee-content">
-                Welcome to the Konkani Bhajans Webpage | If you want to share your bhajans, feel free to contact us | The Bhajans uploaded are not copyrighted by us and we do not claim any ownership over them | In case of removal, please contact us via email at konkanibhajansofficial@gmail.com
-            </div>
-        </div>
-
-        <h2 class="section-title">Recent Uploads</h2>
-        <div class="video-grid">
-            <div class="video-card">
-                <div class="iframe-container">
-                    <iframe src="<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konkani Bhajans | Devotional Hub</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #ff6b00; 
-            --dark-color: #2c3e50;
-            --light-bg: #f9f9f9;
-            --white: #ffffff;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background-color: var(--light-bg);
-            color: var(--dark-color);
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-
-        /* Navigation */
-        nav {
-            background: var(--white);
-            padding: 1rem 5%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .logo-area {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .logo-area img {
-            height: 40px;
-            border-radius: 50%;
-        }
-
-        /* Hero Section */
-        .hero {
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('hero-bg.jpg'); 
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            color: white;
-            padding: 100px 5%;
-            text-align: center;
-            min-height: 60vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .hero h1 {
-            font-size: clamp(2.2rem, 5vw, 3rem);
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-        }
-
-        .hero p {
-            font-size: clamp(1rem, 2vw, 1.2rem);
-            margin-bottom: 30px;
-            opacity: 0.9;
-        }
-
-        .btn-group {
-            display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .btn-subscribe {
-            background-color: #ff0000; 
-            color: white;
-            padding: 14px 35px;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: bold;
-            transition: transform 0.3s;
-            text-transform: uppercase;
-        }
-
-        .btn-contact {
-            background-color: var(--white);
-            color: var(--dark-color);
-            padding: 14px 35px;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: bold;
-            transition: transform 0.3s;
-        }
-
-        .btn-subscribe:hover, .btn-contact:hover { transform: scale(1.05); }
-
-        /* Stats Bar */
-        .stats-bar {
-            display: flex;
-            justify-content: center;
-            gap: 50px;
-            padding: 30px;
-            background: var(--white);
-            margin: -50px auto 40px;
-            width: 85%;
-            max-width: 800px;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            position: relative;
-            z-index: 5;
-        }
-
-        .stat-item { text-align: center; }
-        .stat-item b { display: block; font-size: 1.8rem; color: #f39c12; }
-        .stat-item span { font-size: 0.9rem; color: #7f8c8d; font-weight: 600; }
-
-        /* Marquee Bar */
-        .marquee-container {
-            background: #fff3e0;
-            color: var(--primary-color);
-            padding: 12px 0;
-            font-weight: 600;
-            font-size: 0.95rem;
-            border-top: 2px solid #ffe0b2;
-            border-bottom: 2px solid #ffe0b2;
-            overflow: hidden;
-            width: 100%;
-            margin-bottom: 30px;
-        }
-
-        .marquee-content {
-            display: inline-block;
-            white-space: nowrap;
-            padding-left: 100%;
-            animation: marquee 35s linear infinite;
-        }
-
-        @keyframes marquee {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(-100%); }
-        }
-
-        .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
-        .section-title { text-align: center; margin-bottom: 20px; font-size: 2rem; }
-        
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 25px;
-        }
-
-        .video-card {
-            background: var(--white);
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-        }
-
-        .iframe-container {
-            position: relative;
-            padding-bottom: 56.25%;
-            height: 0;
-            background: #000;
-        }
-
-        .iframe-container iframe {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%; border: 0;
-        }
-
-        footer {
-            text-align: center;
-            padding: 50px 20px;
-            background: var(--dark-color);
-            color: white;
-            margin-top: 60px;
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 { font-size: 2.2rem; }
-            .stats-bar { flex-direction: column; gap: 20px; margin-top: -30px; width: 90%; }
-        }
-    </style>
-</head>
-<body>
-
-    <nav>
-        <div class="logo-area">
-            <img src="logo.png" alt="Logo">
-            <strong>Konkani Bhajans</strong>
-        </div>
-        <div class="nav-links">
-            <a href="mailto:konkanibhajansofficial@gmail.com" style="text-decoration:none; color:var(--dark-color); font-weight:600;">Contact</a>
-        </div>
-    </nav>
-
-    <header class="hero">
-        <h1>Konkani Bhajans</h1>
-        <p>Evergreen Konkani Bhajans Forever</p>
-        <div class="btn-group">
-            <a href="https://www.youtube.com/@konkanibhajans" target="_blank" class="btn-subscribe">Subscribe Now</a>
-            <a href="mailto:konkanibhajansofficial@gmail.com" class="btn-contact">Share Your Bhajans</a>
-        </div>
-    </header>
-
-    <div class="stats-bar">
-        <div class="stat-item"><b>924</b><span>Subscribers</span></div>
-        <div class="stat-item"><b>11+</b><span>Videos</span></div>
-        <div class="stat-item"><b>Free</b><span>Distribution</span></div>
-    </div>
-
-    <div class="container">
-        <div class="marquee-container">
-            <div class="marquee-content">
-                Welcome to the Konkani Bhajans Webpage | If you want to share your bhajans, feel free to contact us | The Bhajans uploaded are not copyrighted by us and we do not claim any ownership over them | In case of removal, please contact us via email at konkanibhajansofficial@gmail.com
-            </div>
-        </div>
-
-        <h2 class="section-title">Recent Uploads</h2>
-        <div class="video-grid">
-            <div class="video-card">
-                <div class="iframe-container">
-                    <iframe src="https://youtu.be/QY8UeKEiKKM?si=bgA7on5Q-HYqUADR" allowfullscreen></iframe>
-                </div>
-                <div class="video-info" style="padding:20px;">
-                    <h4>Sacred Konkani Bhajan</h4>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <p>Conserving our culture and language</p>
-        <p style="margin-top: 10px; font-size: 0.9rem; opacity: 0.7;">&copy; 2026 Konkani Bhajans Channel</p>
-    </footer>
-
-</body>
-</html>" allowfullscreen></iframe>
-                </div>
-                <div class="video-info" style="padding:20px;">
-                    <h4>Sacred Konkani Bhajan</h4>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <p>Conserving our culture and language</p>
-        <p style="margin-top: 10px; font-size: 0.9rem; opacity: 0.7;">&copy; 2026 Konkani Bhajans Channel</p>
-    </footer>
-
-</body>
-</html>" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen></iframe>
                 </div>
                 <div class="video-info" style="padding:20px;">
                     <h4>Sacred Konkani Bhajan</h4>
